--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Title</title>
+		<title>Rental Space</title>
 		<link rel="stylesheet" href="css/style.css" type="text/css" />
 		
-		<link rel="icon" type="image/png" sizes="32x32" href="./images/logo.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta property="og:image" content="./images/logo.png" />
